fix css background image

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url(/img/IMG_0154.jpg);
+	background-image: url(./img/IMG_0154.jpg);
 	background-repeat: no-repeat;
 	background-size: 100%;
     align-items: center;
